# yume-windows

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  build.bat  git-pull.bat  git-push.bat  vcpkg.json
core/: .gitignore
core/src/: asset.hpp  asset_manager.cpp  asset_manager.hpp  camera.cpp  camera.hpp  color.hpp  engine_context.cpp  engine_context.hpp  game_object.cpp  game_object.hpp  game_object_manager.hpp  graphics_api.hpp  light.hpp  log_macros.hpp  logger.cpp  logger.hpp  main.cpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  mesh_buffer.hpp  mesh_buffer_factory.cpp  mesh_buffer_factory.hpp  mesh_renderer.hpp  scene.cpp  scene.hpp  scene_compiler.cpp  scene_format.hpp  scene_loader.cpp  scene_loader.hpp  scene_manager.cpp  scene_manager.hpp  shader_asset.cpp  shader_asset.hpp  shader_compiler.hpp  shader_compiler_factory.cpp  shader_compiler_factory.hpp  shader_program.hpp  shader_program_factory.cpp  (+15 more)
core/src/components/: camera.cpp  camera.hpp  component.hpp  light.cpp  light.hpp  mesh_renderer.hpp  sprite_renderer.hpp
core/src/input/: desktop_input.cpp  desktop_input.hpp  i_input.hpp  i_input_factory.cpp  i_input_factory.hpp  input_key.hpp
core/src/renderer/: renderer.cpp  renderer.hpp  renderer_backend.hpp  renderer_factory.cpp  renderer_factory.hpp
core/src/renderer/backends/directx12/: d3d12_mesh_buffer.cpp  d3d12_mesh_buffer.hpp  d3d12_renderer_backend.cpp  d3d12_renderer_backend.hpp  d3d12_shader_compiler.cpp  d3d12_shader_compiler.hpp  d3d12_shader_program.cpp  d3d12_shader_program.hpp
core/src/renderer/backends/opengl/: open_gl_mesh_buffer.cpp  open_gl_mesh_buffer.hpp  open_gl_renderer_backend.cpp  open_gl_renderer_backend.hpp  open_gl_shader_compiler.cpp  open_gl_shader_compiler.hpp  open_gl_shader_program.cpp  open_gl_shader_program.hpp
core/src/renderer/backends/vulkan/: vulkan_mesh_buffer.cpp  vulkan_mesh_buffer.hpp  vulkan_renderer_backend.cpp  vulkan_renderer_backend.hpp  vulkan_shader_compiler.cpp  vulkan_shader_compiler.hpp  vulkan_shader_program.cpp  vulkan_shader_program.hpp
core/src/renderer/backends/webgl/: web_gl_mesh_buffer.cpp  web_gl_mesh_buffer.hpp  web_gl_renderer_backend.cpp  web_gl_renderer_backend.hpp  web_gl_shader_compiler.cpp  web_gl_shader_compiler.hpp  web_gl_shader_program.cpp  web_gl_shader_program.hpp
core/src/window/: window_desc.hpp  window_manager.cpp  window_manager.hpp
